<resources>
    <string name="app_name">Dev Intensive</string>
    <string name="description_prof">Профессиональные навыки: опытный пользователь ПК(Linux, Windows),
        Знание ООП, MySQL(на уровне запросов),Английский(на уровне чтения тех. литературы),сборка
        проектов(Maven, Gradle). Я начинающий Java-разработчик, Имеется несколько небольших проектов по типу
        (чат, игра пятнашки(Swing), небольшой сервер и др.). Другие навыки: высокая организованность, целеустремленность,
        высокая работоспособность, стрессоустойчивость, способность к быстрому обучению.</string>
    <string name="hint_phone_edit_text">Мобильный телефон</string>
    <string name="text_description_phone">+7 (921) 007–13–85</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="body_email_edit_text">askont@mail.ru</string>
    <string name="vk_hint_edit_text">Профиль в VK</string>
    <string name="vk_body_edit_text">Weber Yakov</string>
    <string name="hint_git_hub_edit_text">Репозиторий</string>
    <string name="git_hub_body_edit_text">github.com/askont/rep</string>
    <string name="hint_about_me">О Себе</string>
    <string name="rating_number">5</string>
    <string name="rating_text">рейтинг</string>
    <string name="count_code">2500</string>
    <string name="code_text">написано строк кода</string>
    <string name="count_projects">5</string>
    <string name="projects_text">проектов</string>
    <string name="menu_profile_text">Мой профиль</string>
    <string name="team_menu_text">Команда</string>
    <string name="text_mode_edit">режим редактирования</string>
    <string name="text_mode_view">режим просмотра</string>
    <string name="menu_text_about_me">О нас</string>
    <string name="menu_text_option">Настройки</string>
    <string name="menu_text_profile">Профиль</string>
    <string name="user_profile_placeholder_image">сменить фото</string>
    <string name="user_profile_dialog_gallery">загрузить из галереи</string>
    <string name="user_profile_dialog_camera">сделать снимок</string>
    <string name="user_profile_cancel_dialog">отмена</string>
    <string name="change_title_dialog">изменить фотографию</string>
    <string name="chooser_text_title">выберите фото</string>
    <string name="permission_accept_text">нужно разрешения на камеру</string>
    <string name="snackbar_button_action_text">настройки</string>
    <string name="error_text_sneckbar">недоступно</string>
    <string name="https_text">https://</string>
    <string name="title_chooset_email">Выберите почтовый клиент</string>
</resources>
