<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yakov.weber.devintensive.ui.activities.MainActivity">

    <include layout="@layout/header_view"/>

    <LinearLayout
        style="@style/linear_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big">

        <ImageView
            style="@style/image.left"
            android:src="@drawable/ic_phone_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_large_72"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/mobile_phone_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/hint_phone_edit_text"
                    android:inputType="phone"
                    android:text="@string/text_description_phone" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            style="@style/image.right"
            android:src="@drawable/ic_phone_right" />


    </LinearLayout>

    <View style="@style/view_sep" />

    <LinearLayout
        style="@style/linear_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big">

        <ImageView
            style="@style/image.left"
            android:src="@drawable/ic_email_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/email_edit_text_hint"
                    android:inputType="textEmailAddress"
                    android:text="@string/body_email_edit_text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            style="@style/image.right"
            android:src="@drawable/ic_send_email_right" />


    </LinearLayout>

    <View style="@style/view_sep" />

    <LinearLayout
        style="@style/linear_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big">

        <ImageView
            style="@style/image.left"
            android:src="@drawable/ic_material_vk" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/vk_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/vk_hint_edit_text"
                    android:inputType="textAutoCorrect"
                    android:text="@string/vk_body_edit_text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            style="@style/image.right"
            android:src="@drawable/ic_visibility_right" />
    </LinearLayout>

    <View style="@style/view_sep" />

    <LinearLayout
        style="@style/git_hub_linear_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big"
        android:orientation="horizontal">

        <ImageView
            style="@style/image.left"
            android:src="@drawable/ic_github_alt_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/git_hub_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/hint_git_hub_edit_text"
                    android:inputType="textAutoCorrect"
                    android:text="@string/git_hub_body_edit_text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            style="@style/image.right"
            android:src="@drawable/ic_visibility_right" />

    </LinearLayout>

    <LinearLayout
        style="@style/git_hub_linear_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big"
        android:orientation="horizontal">

        <ImageView
            style="@style/image.left"
            android:src="@drawable/ic_github_alt_left"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"

            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/git_hub_2_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/hint_git_hub_edit_text"
                    android:inputType="textAutoCorrect"
                    android:text="@string/git_hub_body_edit_text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            style="@style/image.right"
            android:src="@drawable/ic_visibility_right" />

    </LinearLayout>

    <LinearLayout
        style="@style/git_hub_linear_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big"
        android:orientation="horizontal">

        <ImageView
            style="@style/image.left"
            android:src="@drawable/ic_github_alt_left"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/git_hub_3_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/hint_git_hub_edit_text"
                    android:inputType="textAutoCorrect"
                    android:text="@string/git_hub_body_edit_text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            style="@style/image.right"
            android:src="@drawable/ic_visibility_right" />

    </LinearLayout>

    <View style="@style/view_sep" />

    <LinearLayout
        style="@style/linear_style"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/image"
            android:src="@drawable/ic_if_user_profile" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_small_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/about_me_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_about_me"
                    android:text="@string/description_prof"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/grey"
                    android:textSize="12sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
